# RagPart1

./: .gitignore  non_async_qdrant_main.py  pyproject.toml  readme.md  setup.sh
qdrant_storage/: raft_state.json
qdrant_storage/collections/chat_with_docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/chat_with_docs/0/segments/03dc3ae3-65d0-4d59-aa7c-aa65da4d2553/: 000022.sst  000025.sst  IDENTITY  LOG  MANIFEST-000005  segment.json
qdrant_storage/collections/chat_with_docs/0/segments/078420bf-75b3-43a1-b5ad-e58fad831d08/: 000022.sst  000025.sst  IDENTITY  LOG  MANIFEST-000005  segment.json
qdrant_storage/collections/chat_with_docs/0/segments/3d534a5a-9404-45e2-8044-8df5294691a6/: 000022.sst  000025.sst  IDENTITY  LOG  MANIFEST-000005  segment.json
qdrant_storage/collections/chat_with_docs/0/segments/9a920940-947c-4caf-9c86-952153fb9334/: 000022.sst  000025.sst  IDENTITY  LOG  MANIFEST-000005  segment.json
qdrant_storage/collections/chat_with_docs/0/segments/9f27957f-af59-4de1-914a-ebc22805df0c/: 000022.sst  000025.sst  IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/chat_with_docs/0/segments/d0b38b9b-1396-45d8-81de-3dcba9f38686/: 000022.sst  000025.sst  IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/chat_with_docs/0/segments/d9afa312-25df-4bbc-9200-cd26e3f7e6d1/: 000022.sst  000025.sst  IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/chat_with_docs/0/segments/de4aed01-6e9b-43dc-b15e-e92a400c2a27/: 000022.sst  000025.sst  IDENTITY  LOG  MANIFEST-000005  segment.json
(+32 files in other folders)
