[project]
name = "ragpart1"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivanxiedata",email = "ivanxiedata@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "llama-index (>=0.12.23,<0.13.0)",
    "qdrant-client (>=1.13.3,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "llama-index-embeddings-huggingface (>=0.5.2,<0.6.0)",
    "llama-index-llms-ollama (>=0.5.3,<0.6.0)",
    "llama-index-vector-stores-qdrant (>=0.4.3,<0.5.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
